# pebkac-chrome

./: EXTORSAMPLE.odt  Llamacpp VULKAN DOCKERFILE.txt  README.md  README.txt  ROOT docker-compose.yml  ROOT env  ROOT env.txt  Zenbot Yaml Runner.txt  docker-compose.yml  main.py  pebkac Yaml Runner.txt  requirements.txt
.github/: FUNDING.yml
duckdb-service/: Dockerfile  duckdb_service.py
openapi-server/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
static/: index.html  style.css
zendriver-docker/: Dockerfile  docker-compose.yml  pyproject.toml
zendriver-docker/app/: main.py  requirements.txt
zendriver-docker/app/api/: dependencies.py
zendriver-docker/app/api/routes/: __init__.py  agent.py  browser.py  capture.py  extraction.py  health.py  interaction.py  network.py
zendriver-docker/app/core/: browser.py  cloudflare.py  config.py  database.py  exceptions.py  timeouts.py
zendriver-docker/app/models/: requests.py  responses.py
zendriver-docker/app/services/: agent_manager.py  cache_coordinator.py  cache_service.py  element.py  extraction.py  safe_code_agent.py  workflows.py
zendriver-docker/app/tools/: __init__.py  browser_tools.py  cloudflare_tools.py  extraction_tools.py  search_tools.py  tab_tools.py  utility_tools.py
zendriver-docker/app/utils/: browser_utils.py  cache.py  cache_utils.py  duckdb_client.py  logger.py  memory_manager.py  metrics.py  tab_manager.py  validators.py
