# /openapi-server/pyproject.toml (COMPLETE VERSION)
[project]
name = "openapi-tools"
version = "3.0.0"
description = "OpenAPI Bridge with SmolAgents integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.25.1",
    "aiohttp>=3.9.1",
    "redis==6.2",
    "aiofiles>=23.2.1",    
    "nest-asyncio>=1.5.8",
    "smolagents[openai]>=1.21.1",
    "pydantic>=2.5.0",     
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]  # Include all Python files in the current directory
