[project]
name = "zendriver-docker-example"
version = "0.1.0"
description = "Example project for using Zendriver with Docker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "zendriver>=0.14.2",
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "httpx>=0.28.1",
    "redis==6.2",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
    "aiohttp>=3.12.5",
    "nest-asyncio>=1.5.8",
    "smolagents>=1.21.1",
    "trafilatura>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.1",
    "ruff>=0.12.9",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
